[gd_scene load_steps=21 format=3 uid="uid://lgfs26ppwk52"]

[ext_resource type="PackedScene" uid="uid://d1vjb7pt23jud" path="res://Assets/Models/Monster/cac-1728730047608.glb" id="1_8m00c"]
[ext_resource type="Script" path="res://Character/Enemies/monster.gd" id="2_cvx5a"]
[ext_resource type="AudioStream" uid="uid://cwsdbtmmlux3i" path="res://Audio/monster.mp3" id="3_1hpwh"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_g1rdj"]
height = 200.0
radius = 60.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_rn3lu"]
height = 20.0
radius = 1000.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_rrkpu"]
height = 200.0
radius = 120.0

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6mwdv"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ur64v"]
animation = &"Running"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7qqi3"]
animation = &"Walking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_aamiv"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_t3vnn"]
advance_mode = 2
advance_condition = &"isHunting"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_emylu"]
advance_mode = 2
advance_condition = &"isLooking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yqqdm"]
advance_mode = 2
advance_condition = &"isLooking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qln2c"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cv67h"]
advance_mode = 2
advance_condition = &"isHunting"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mr3ji"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_qm3og"]
states/Idle/node = SubResource("AnimationNodeAnimation_6mwdv")
states/Idle/position = Vector2(244.5, 190)
states/Running/node = SubResource("AnimationNodeAnimation_ur64v")
states/Running/position = Vector2(628, 167.75)
states/Start/position = Vector2(103.5, 121)
states/Walking/node = SubResource("AnimationNodeAnimation_7qqi3")
states/Walking/position = Vector2(307, 38.5)
transitions = ["Start", "Walking", SubResource("AnimationNodeStateMachineTransition_aamiv"), "Walking", "Running", SubResource("AnimationNodeStateMachineTransition_t3vnn"), "Running", "Walking", SubResource("AnimationNodeStateMachineTransition_emylu"), "Idle", "Walking", SubResource("AnimationNodeStateMachineTransition_yqqdm"), "Walking", "Idle", SubResource("AnimationNodeStateMachineTransition_qln2c"), "Idle", "Running", SubResource("AnimationNodeStateMachineTransition_cv67h"), "Running", "Idle", SubResource("AnimationNodeStateMachineTransition_mr3ji")]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7ahy3"]
transparency = 1
albedo_color = Color(0, 0.858824, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_876c1"]
material = SubResource("StandardMaterial3D_7ahy3")
radius = 100.0
height = 200.0

[sub_resource type="SphereShape3D" id="SphereShape3D_wgdm3"]
radius = 2.0

[node name="CharacterBody3D" instance=ExtResource("1_8m00c")]
script = ExtResource("2_cvx5a")

[node name="Node" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="Skeleton3D" parent="Node" index="0"]
bones/0/position = Vector3(3.59816, 70.7813, 0.360859)
bones/0/rotation = Quaternion(0.0945203, -0.0995062, 0.0417142, 0.989659)
bones/1/rotation = Quaternion(0.0701058, 0.0306162, -0.0196931, 0.996875)
bones/2/rotation = Quaternion(0.103425, 0.0523179, -0.0529558, 0.991848)
bones/3/rotation = Quaternion(0.0960382, 0.0534186, -0.0522131, 0.992571)
bones/4/rotation = Quaternion(0.489309, 0.515903, -0.432431, 0.554458)
bones/5/rotation = Quaternion(0.514861, -0.186648, 0.0611951, 0.834467)
bones/6/rotation = Quaternion(3.81842e-07, -1.27242e-07, 0.29089, 0.956757)
bones/7/rotation = Quaternion(0.131962, -0.102112, 0.203179, 0.96482)
bones/8/rotation = Quaternion(0.325095, 0.158814, 0.272173, 0.891635)
bones/9/rotation = Quaternion(0.00124755, -0.00961664, -0.182008, 0.983249)
bones/10/rotation = Quaternion(-0.025126, -0.00455939, -0.06909, 0.997284)
bones/12/rotation = Quaternion(0.0427427, -1.41375e-05, -0.00545406, 0.999071)
bones/13/rotation = Quaternion(0.0747804, -3.44589e-08, -0.00896364, 0.99716)
bones/14/rotation = Quaternion(0.0374166, -2.78654e-08, -0.00448499, 0.99929)
bones/16/rotation = Quaternion(0.0426034, -1.41151e-05, -0.0054374, 0.999077)
bones/17/rotation = Quaternion(0.0749195, 8.3819e-09, -0.00898034, 0.997149)
bones/18/rotation = Quaternion(0.0374167, -2.77357e-08, -0.00448496, 0.99929)
bones/20/rotation = Quaternion(0.0427426, -1.41312e-05, -0.00545406, 0.999071)
bones/21/rotation = Quaternion(0.0747804, -3.22762e-08, -0.00896364, 0.99716)
bones/22/rotation = Quaternion(0.0374166, -2.78654e-08, -0.00448499, 0.99929)
bones/24/rotation = Quaternion(0.038297, 0.00152205, -0.0407944, 0.998432)
bones/25/rotation = Quaternion(0.0791434, 0.00268515, 0.0263181, 0.996512)
bones/26/rotation = Quaternion(0.0374166, -3.40457e-08, -0.00448496, 0.99929)
bones/28/rotation = Quaternion(-0.088748, -0.0117668, -0.00596823, 0.995967)
bones/29/rotation = Quaternion(-0.252325, -0.065672, 0.06276, 0.963369)
bones/34/rotation = Quaternion(0.54585, -0.449291, 0.37663, 0.59861)
bones/35/rotation = Quaternion(0.458188, 0.195225, -0.244134, 0.832075)
bones/36/rotation = Quaternion(1.02445e-08, 3.35276e-08, -0.135886, 0.990725)
bones/37/rotation = Quaternion(0.223466, 0.146728, -0.00689752, 0.96358)
bones/38/rotation = Quaternion(0.164017, -0.062719, -0.222404, 0.95901)
bones/39/rotation = Quaternion(0.0138393, 0.000280741, 0.13676, 0.990508)
bones/40/rotation = Quaternion(-0.0230634, 0.000154179, 0.0260487, 0.999395)
bones/42/rotation = Quaternion(0.223748, 7.37499e-05, 0.0274076, 0.974262)
bones/43/rotation = Quaternion(0.207145, 9.59262e-08, 0.0250761, 0.977989)
bones/44/rotation = Quaternion(0.104147, -1.16411e-09, 0.0126076, 0.994482)
bones/46/rotation = Quaternion(0.223748, 7.36779e-05, 0.0274073, 0.974262)
bones/47/rotation = Quaternion(0.207145, 8.19564e-08, 0.0250761, 0.977989)
bones/48/rotation = Quaternion(0.104147, -1.00811e-08, 0.0126075, 0.994482)
bones/50/rotation = Quaternion(0.223748, 7.37141e-05, 0.0274074, 0.974262)
bones/51/rotation = Quaternion(0.207145, 6.21658e-08, 0.025076, 0.977989)
bones/52/rotation = Quaternion(0.104147, -1.15583e-09, 0.0126076, 0.994482)
bones/54/rotation = Quaternion(0.223748, 7.37161e-05, 0.0274074, 0.974262)
bones/55/rotation = Quaternion(0.207145, 5.58794e-08, 0.025076, 0.977989)
bones/56/rotation = Quaternion(0.104147, -1.15589e-09, 0.0126076, 0.994482)
bones/63/rotation = Quaternion(0.0487302, 0.589509, 0.792893, -0.146373)
bones/64/rotation = Quaternion(-0.760124, -0.0109614, -0.0819096, 0.644501)
bones/65/rotation = Quaternion(0.560178, -0.0791896, -0.0610005, 0.822319)
bones/66/rotation = Quaternion(0.472669, -0.000140165, -7.49687e-05, 0.88124)
bones/68/rotation = Quaternion(-0.0273799, 0.0869438, 0.974448, 0.205284)
bones/69/rotation = Quaternion(-0.736144, -0.0436924, -0.0253393, 0.674938)
bones/70/rotation = Quaternion(0.55379, 0.0347564, 0.171177, 0.81413)
bones/71/rotation = Quaternion(0.684001, 0.179759, 0.0392142, 0.705897)

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="." index="2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="." index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 100, 0)
shape = SubResource("CylinderShape3D_g1rdj")

[node name="OuterDetector" type="Area3D" parent="." index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0105963, 0, -0.00165558)

[node name="CollisionShape3D" type="CollisionShape3D" parent="OuterDetector" index="0"]
shape = SubResource("CylinderShape3D_rn3lu")

[node name="InnerDetector" type="Area3D" parent="." index="5"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="InnerDetector" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 100, 0)
shape = SubResource("CylinderShape3D_rrkpu")

[node name="AnimationTree" type="AnimationTree" parent="." index="6"]
tree_root = SubResource("AnimationNodeStateMachine_qm3og")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/idle = false
parameters/conditions/isHunting = false
parameters/conditions/isLooking = false

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="." index="7"]
stream = ExtResource("3_1hpwh")
volume_db = 70.0
max_distance = 80.0

[node name="Indicator" type="MeshInstance3D" parent="." index="8"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 700, 0)
mesh = SubResource("SphereMesh_876c1")

[node name="CharacterBody3D" type="CharacterBody3D" parent="Indicator" index="0"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Indicator/CharacterBody3D" index="0"]
shape = SubResource("SphereShape3D_wgdm3")

[connection signal="body_entered" from="OuterDetector" to="." method="_on_outer_detector_body_entered"]
[connection signal="body_exited" from="OuterDetector" to="." method="_on_outer_detector_body_exited"]
[connection signal="body_entered" from="InnerDetector" to="." method="_on_inner_detector_body_entered"]
